--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Blank hello</ion-title>
@@ -16,6 +17,13 @@
   <p>Counter: {{counter}}</p>
 
   <ion-button (click)="increaseCounter()">Click me</ion-button>
+
+  <ion-button (click)="captureImage()">
+    Click Picture
+ </ion-button>
+ 
+ <img [src]="clickedImage" />
+
 
   <div id="container">
     <strong>Ready to create an app?</strong>
